--- a/TinDog+Start+Here/TinDog Start Here/index.html
+++ b/TinDog+Start+Here/TinDog Start Here/index.html
@@ -25,7 +25,7 @@
     <div class="container-fluid external">
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container-fluid internal">
+        <div class="container-fluid">
           <a class="navbar-brand brand" href="" style="font-size: 2.5rem; font-weight: 550;">tindog</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -33,13 +33,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href="">Contact</a>
+                <a class="nav-link" href="#footer">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Pricing</a>
+                <a class="nav-link" href="#pricing">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Download</a>
+                <a class="nav-link" href="#cta">Download</a>
               </li>
             </ul>
           </div>
@@ -52,12 +52,12 @@
       <!-- Title -->
 
       <div class="row">
-        <div class="col-lg-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
+        <div class="col-xl-6">
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
         </div>
-        <div class="col-lg-6">
+        <div class="col-xl-6">
           <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
@@ -69,24 +69,24 @@
 
   <section id="features">
     <div class="container features">
-    <div class="row">
-      <div class=" feature-box col-lg-4">
-        <i class="fas fa-check-circle feature-icon"></i>
-        <h3 class="ftitle">Easy to use.</h3>
-        <p class="features-text">So easy to use, even your dog could do it.</p>
-      </div>
-      <div class="feature-box col-lg-4">
-        <i class="fas fa-bullseye feature-icon"></i>
-        <h3 class="ftitle">Elite Clientele</h3>
-        <p class="features-text">We have all the dogs, the greatest dogs.</p>
-      </div>
-      <div class="feature-box col-lg-4">
-        <i class="fas fa-heart feature-icon"></i>
-        <h3 class="ftitle">Guaranteed to work.</h3>
-        <p class="features-text">Find the love of your dog's life or your money back.</p>
+      <div class="row">
+        <div class=" feature-box col-lg-4">
+          <i class="fas fa-check-circle feature-icon"></i>
+          <h3 class="ftitle">Easy to use.</h3>
+          <p class="features-text">So easy to use, even your dog could do it.</p>
+        </div>
+        <div class="feature-box col-lg-4">
+          <i class="fas fa-bullseye feature-icon"></i>
+          <h3 class="ftitle">Elite Clientele</h3>
+          <p class="features-text">We have all the dogs, the greatest dogs.</p>
+        </div>
+        <div class="feature-box col-lg-4">
+          <i class="fas fa-heart feature-icon"></i>
+          <h3 class="ftitle">Guaranteed to work.</h3>
+          <p class="features-text">Find the love of your dog's life or your money back.</p>
+        </div>
       </div>
     </div>
-  </div>
 
 
   </section>
@@ -95,15 +95,27 @@
   <!-- Testimonials -->
 
   <section id="testimonials">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
+          <em>Pebbles, New York</em>
+        </div>
+        <div class="carousel-item">
+          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <em>Beverly, Illinois</em>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
 
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
-
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
-
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
+    </div>
   </section>
 
 
@@ -124,32 +136,59 @@
 
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
+    <div class="row">
+      <div class="pricing-column col-lg-4 col-md-6">
+        <div class="card text">
+          <div class="card-header">
+            <h3>Chihuahua</h3>
+          </div>
+          <div class="card-body">
+            <h2>Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+            <div class="d-grid gap-2">
+              <button type="button" class="btn btn-outline-dark btn-lg">Sign Up</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
+      <div class=" pricing-column col-lg-4 col-md-6">
+        <div class="card text">
+          <div class="card-header">
+            <h3>Labrador</h3>
+          </div>
+          <div class="card-body">
+            <h2>$49 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <div class="d-grid gap-2">
+              <button type="button" class="btn btn-dark btn-lg">Sign Up</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
+      <div class="pricing-column col-lg-4">
+        <div class="card">
+          <div class="card-header">
+            <h3>Mastiff</h3>
+          </div>
+          <div class="card-body">
+            <h2>$99 / mo</h2>
+            <p>Pirority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <div class="d-grid gap-2">
+              <button type="button" class="btn btn-dark btn-lg">Sign Up</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
 
@@ -157,9 +196,9 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
 
   </section>
 
@@ -168,6 +207,7 @@
 
   <footer id="footer">
 
+    <i class="fab fa-twitter footer-icon"></i><i class="fab fa-instagram footer-icon"></i><i class="fab fa-facebook-f footer-icon"></i><i class="fas fa-envelope footer-icon"></i>
     <p>© Copyright 2018 TinDog</p>
 
   </footer>
